# MatrixBot-Demo

./: .env.staging.example  .gitignore  DEPLOYMENT.md  README.md  requirements.txt  requirements.txt.old  start_bot.sh  start_bot_staging.sh
data/: action_ai_sessions.jsonl  action_diskussionen.txt  action_konfliktkarten.txt  contemplation_ai_sessions.jsonl  contemplation_ai_sessions_v2.jsonl  contemplation_erfahrungen.txt  contemplation_geschichten.txt  contemplation_journal.txt  contemplation_situationen.txt  contemplation_story.txt  control_data.txt  maintenance_ai_sessions.jsonl  maintenance_ai_sessions_v2.1.jsonl  maintenance_ai_sessions_v2.jsonl  maintenance_hilfe_andere.txt  maintenance_momente.txt  maintenance_schwierig.txt  maintenance_tipps.txt  precontemplation_ai_sessions.jsonl  precontemplation_ai_sessions_v2.jsonl  precontemplation_data.txt  preparation_ai_sessions.jsonl  preparation_data.txt  preparation_dialog.txt  preparation_ideen.txt  preparation_koffer.txt  reassessment_data.txt  reevaluation_data.txt  study_completed.txt  subscribers.txt  user_data.txt
data/backup_old_users/: 00d8b3fa-d55d-4b2f-b87a-077c7f12d3b2.json  09b98137-3420-4243-a5bd-5f5718e99694.json  12a34e46-74b9-427d-88b5-103b3d94693a.json  1c1fbdc8-a7e2-478c-acc1-7b90f7f989cf.json  (+44 more)
docs/: ARCHITEKTUR-AUDIT.md  DEVLOG.md  README.md  chat-log.md  staging-setup.md
matrix_sidecar/: Cargo.toml
matrix_sidecar/src/: main.rs
rust-sidecar/: Cargo.toml
rust-sidecar/src/: main.rs
src/: ai_service.py  demokratiebot_main.py  matrix_adapter.py  matrix_adapter_sidecar.py  user_state_points.py
(+17 files in other folders)
