[package]
name = "ella-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.7", default-features = false, features = ["e2e-encryption", "rustls-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
